# qtcreator

./: CMakeLists.txt  qtcreator.pro  qtcreator.qbs
cmake/: QtcConfig.cmake  QtcPlugin.cmake
share/: share.pro  share.qbs
share/qtcreator/: static.pro
share/qtcreator/wizards/plainc/: wizard.xml
share/qtcreator/wizards/plaincpp/: wizard.xml
src/: qtcreatorplugin.pri
src/app/: CMakeLists.txt
src/libs/: CMakeLists.txt  libs.pro  libs.qbs
src/libs/aggregation/: CMakeLists.txt
src/libs/cplusplus/: CMakeLists.txt
src/libs/extensionsystem/: CMakeLists.txt
src/libs/languageutils/: CMakeLists.txt
src/libs/modelinglib/: modelinglib.qbs
src/libs/ssh/: CMakeLists.txt
src/libs/utils/: CMakeLists.txt  historycompleter.cpp
src/plugins/: CMakeLists.txt  plugins.pro  plugins.qbs
src/plugins/analyzerbase/: AnalyzerBase.pluginspec.in  analyzerbase.qbs  analyzerbase_dependencies.pri
src/plugins/android/: android.qbs  androidconfigurations.cpp  androiddeployqtstep.cpp
src/plugins/bineditor/: bineditor.qbs
src/plugins/clangcodemodel/: ClangCodeModel.json.in  ClangCodeModel.pluginspec.in  clangcodemodel.pro
src/plugins/classview/: classview.qbs
src/plugins/cmakeprojectmanager/: CMakeLists.txt  CMakeProjectManager.pluginspec.in  cmakebuildconfiguration.cpp  cmakeopenprojectwizard.cpp  cmakeproject.cpp  cmakeprojectmanager.cpp  cmakeprojectmanager_dependencies.pri  cmakerunconfiguration.cpp  cmakevalidator.cpp  makestep.cpp
src/plugins/coreplugin/: CMakeLists.txt  basefilewizard.cpp  coreconstants.h  documentmanager.cpp  mainwindow.cpp
src/plugins/coreplugin/locator/: executefilter.cpp
src/plugins/cppeditor/: CMakeLists.txt  cppeditor.cpp  cppeditor.h
src/plugins/cpptools/: CMakeLists.txt  cppcodemodelsettings.h  cpptoolsconstants.h  cpptoolsplugin.cpp
src/plugins/debugger/: debugger.pro  debugger.qbs  debugger_dependencies.pri  debuggeractions.cpp  debuggerengine.cpp  debuggeritemmanager.cpp  debuggerkitinformation.cpp  debuggerplugin.cpp  debuggerrunner.cpp
src/plugins/debugger/shared/: cdbsymbolpathlisteditor.cpp
src/plugins/diffeditor/: CMakeLists.txt  diffeditor.qbs
src/plugins/find/: CMakeLists.txt
src/plugins/git/: CMakeLists.txt  git.pro  git.qbs  gitclient.cpp  gitplugin.cpp  gitplugin.h  gitsubmiteditorwidget.cpp
src/plugins/help/: generalsettingspage.cpp  help.qbs  helpplugin.cpp  openpagesmanager.cpp
src/plugins/imageviewer/: imageviewer.qbs
src/plugins/locator/: CMakeLists.txt  executefilter.cpp
src/plugins/modeleditor/: ModelEditor.json.in  modeleditor.qbs
src/plugins/projectexplorer/: CMakeLists.txt  msvctoolchain.cpp  projectexplorer.cpp  projectexplorer.pro  projectwelcomepage.cpp
src/plugins/projectexplorer/customwizard/: customwizard.cpp
src/plugins/qbsprojectmanager/: QbsProjectManager.pluginspec.in
src/plugins/qmakeprojectmanager/: qmakeprojectmanager.qbs
src/plugins/qmljseditor/: qmljseditor.qbs
src/plugins/qmljstools/: QmlJSTools.pluginspec.in  qmljsmodelmanager.cpp  qmljstools_dependencies.pri
src/plugins/qmlprofiler/: qmlprofiler.qbs
src/plugins/qmlprojectmanager/: qmlprojectmanager.qbs
src/plugins/qt4projectmanager/: profilehighlighter.h  profilehoverhandler.cpp  qt4projectmanager.qbs
src/plugins/resourceeditor/: resourceeditor.qbs
src/plugins/texteditor/: CMakeLists.txt  basetexteditor.cpp  completionsettings.cpp  displaysettings.cpp  fontsettings.cpp  marginsettings.cpp  texteditor.cpp  texteditoractionhandler.cpp  texteditorplugin.cpp
src/plugins/todo/: Todo.json.in  Todo.pluginspec.in  todo.pro  todo.qbs  todo_dependencies.pri  todoitemsprovider.cpp
src/plugins/valgrind/: Valgrind.pluginspec.in  valgrind.qbs  valgrind_dependencies.pri  valgrindruncontrolfactory.cpp  valgrindtool.cpp
src/plugins/vcsbase/: CMakeLists.txt  vcsbase.qbs
src/plugins/welcome/: welcome.qbs
src/tools/: tools.pro  tools.qbs
src/tools/clangbackend/: clangbackend.qbs
